[tool.poetry]
name = "mercylog"
version = "0.1.0"
description = "Datalog Inspired Logic Programming in Python"
authors = ["Rajiv Abraham <rajiv.abraham@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
dataclasses = "^0.6.0"
multipledispatch = "^0.6.0"
toolz = "^0.10.0"
mypy = "^0.720.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pyDatalog = "^0.17.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
