[tool.poetry]
name = "mercylog"
version = "0.1.0"
description = "Datalog Inspired Logic Programming in Python"
authors = ["Rajiv Abraham <rajiv.abraham@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
returns = "^0.14.0"
oslash = "^0.5.1"
pyrsistent = "^0.16.0"
logical-unification = "^0.4.3"
sphinx = "^3.1.2"
pandas = "^1.1.2"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
pytest = "^5.4.3"
rope = "^0.17.0"
ipython = "^7.16.1"
jupyter-book = "^0.8.0"
ghp-import = "^1.0.0"
invoke = "^1.4.1"
jupytext = "^1.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
